Fix clipping of stream and topic name in left sidebar
Changed a little bit the rule for line-height and now it does not clip "g" letter in of stream and topic name in the left sidebar

Fixes #8209.

--- a/static/styles/left-sidebar.css
+++ b/static/styles/left-sidebar.css
@@ -321,9 +321,9 @@ ul.filters li.out_of_home_view li.muted_topic {
     white-space: nowrap;
     overflow: hidden;
 
-    line-height: 1.1;
+    line-height: 1.2;
     position: relative;
-    top: 3px;
+    top: 4px;
 }
 
 #stream_filters .subscription_block.stream-with-count {
